bitbybit/tests/no_compile/invalid_field_range.stderr
error: bitfield!: Field invalid_range has type u8, which doesn't match the number of bits (9) that are being used for it
 --> tests/no_compile/invalid_field_range.rs:6:20
  |
6 |     invalid_range: u8,
  |                    ^^
